--- a/src/pages/ShowsList.css
+++ b/src/pages/ShowsList.css
@@ -10,7 +10,8 @@ ShowsList Page CSS | Bingebook (a full-stack binge-facilitating app)
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: flex-start;
-    width: max-content;
-    margin-top: 50px;
-    margin-left: 100px;
+    width: auto;
+    padding: 50px 5px 50px 100px;
+    border-top: solid 22px #d8c3c3;
+    border-bottom: solid 22px #d8c3c3;
 }
